apps/jellyfin/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin:10.8.13
          ports:
            - containerPort: 8096
              name: http
            - containerPort: 8920
              name: https
            - containerPort: 7359
              name: discovery
              protocol: UDP
            - containerPort: 1900
              name: ssdp
              protocol: UDP
          volumeMounts:
            - mountPath: /dev/dri
              name: dev-dri
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
