apps/jellyfin/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  replicas: 1
  serviceName: jellyfin
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin
          ports:
            - name: http
              containerPort: 8096
            - name: discovery
              containerPort: 7359
              protocol: UDP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 600
            periodSeconds: 120
            timeoutSeconds: 30
            failureThreshold: 10
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 480
            periodSeconds: 15
            timeoutSeconds: 10
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: config
              mountPath: /config
            - name: dev-dri
              mountPath: /dev/dri
      securityContext:
        fsGroup: 1000
        supplementalGroups:
          - 44
      volumes:
        - name: cache
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: dev-dri
          hostPath:
            type: Directory
            path: /dev/dri
